import { composeStories } from '@storybook/react';
import { render, screen } from '@testing-library/react';
import type { ElementType, ReactNode } from 'react';
import { Children, createElement, forwardRef } from 'react';

import * as stories from './SidePanelInternal.stories';

jest.mock('react-i18next', () => ({
	useTranslation: () => ({ t: (key: string) => (key === 'Side_panel' ? 'Side panel' : key) }),
}));

jest.mock('@rocket.chat/fuselage-hooks', () => ({
	useMergedRefs:
		(...refs: any[]) =>
		(node: unknown) => {
			refs.forEach((ref) => {
				if (typeof ref === 'function') {
					ref(node);
				}
			});
		},
}));

jest.mock('../../../lib/RoomManager', () => ({
	useOpenedRoom: () => 'room-2',
}));

jest.mock('../contexts/RoomsNavigationContext', () => ({
	useIsRoomFilter: () => false,
}));

jest.mock('@rocket.chat/ui-contexts', () => ({
	useLayout: () => ({
		isTablet: false,
		sidePanel: {
			closeSidePanel: jest.fn(),
		},
	}),
}));

jest.mock('@rocket.chat/ui-client', () => ({
	CustomVirtuaScrollbars: ({ children }: { children: ReactNode }) => <>{children}</>,
}));

jest.mock(
	'virtua',
	() => ({
		Virtualizer: forwardRef(
			(
				{
					as: RootComponent = 'div',
					children,
					item: ItemComponent = 'div',
				}: {
					as?: ElementType;
					children: ReactNode;
					item?: ElementType;
				},
				ref,
			) =>
				createElement(
					RootComponent,
					{ ref, 'data-testid': 'sidepanel-virtua-list' },
					Children.map(children, (child, index) => createElement(ItemComponent, { index }, child)),
				),
		),
	}),
	{ virtual: true },
);

const composed = composeStories(stories);
const testCases = Object.values(composed).map((Story) => [Story.storyName || 'Story', Story] as const);

test.each(testCases)('renders %s without crashing', (_storyName, Story) => {
	const { baseElement } = render(<Story />);
	expect(baseElement).toMatchSnapshot();
});

describe('SidePanelInternal', () => {
	it('renders side panel rooms through Virtua while preserving the list semantics', () => {
		const { Default } = composed;
		render(<Default />);

		const list = screen.getByRole('list', { name: 'Channels' });

		expect(screen.getByTestId('sidepanel-virtua-list')).toBe(list);
		const listItems = screen.getAllByRole('listitem');
		expect(listItems).toHaveLength(2);
		expect(listItems[0]).not.toHaveAttribute('index');
		expect(listItems[0]).toHaveAttribute('data-item-index', '0');
		expect(listItems[1]).toHaveAttribute('data-item-index', '1');
		expect(screen.getByRole('link', { name: 'Alpha' })).toBeInTheDocument();
		expect(screen.getByRole('link', { name: 'Beta' })).toHaveAttribute('aria-current', 'page');
	});
});
